updated Bob configuration
FossilOrigin-Name: a0c59ad83348462db9f5e09d1de3d677da3ff53b15c65bdbc0f29c270843ec81

--- a/.bob.yml
+++ b/.bob.yml
@@ -70,3 +70,9 @@ version: 2.0
    description: Build Steam sky in release mode
    flags:
       - windowsonly
+- command:
+   name: pretty
+   execute:
+      - gnatpp -P steamsky.gpr
+      - gnatpp -P tests/prettytests.gpr
+   description: Pretty print Steam sky source code
