added command to format test units code
FossilOrigin-Name: 5f25138a3531a12fbd6cdd694f701fe9dd559cccb2c6a48287d846fd82ee68ec

--- a/.bob.yml
+++ b/.bob.yml
@@ -70,3 +70,8 @@ version: 2.0
       - gnatpp -P steamsky.gpr
       - gnatpp -P tests/prettytests.gpr
    description: Pretty print Steam sky source code
+- command:
+   name: prettytests
+   execute:
+      - gnatpp -P tests/prettytests.gpr
+   description: Pretty print unit tests source code
