updated Travis configuration
FossilOrigin-Name: 49676a8d149abd1f69b19d366f884c37d5ce6594904380827c4e2f41546c6c95

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 
 branches:
    only:
-      - master
+      - 5.0
 
 services:
    - docker
@@ -48,7 +48,7 @@ deploy:
   target_commitish: $TRAVIS_COMMIT
   tag_name: travis-dev-build
   on:
-   branch: master
+   branch: 5.0
 
 notifications:
   email: false
