updated Bob configuration
FossilOrigin-Name: e4ccd1641187c6fc3e581a82085c3920bf9cfc5f5c6e95de8248d2570aeb2d2f

--- a/.bob.yml
+++ b/.bob.yml
@@ -39,10 +39,8 @@ version: 2.0
 - command:
    name: docs
    execute:
-      - others/generatedocs.py
+      - others/generatedocs.tcl
    description: Generate code documentation
-   flags:
-      - unixonly
 - command:
    name: gprof
    execute:
