--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ matrix:
    include:
       - os: linux
         env:
-         - FILENAME=steamsky-dev-Linux-64.tar.gz
+         - EXTENSION=tar.gz
         install:
          - docker pull thindil/gnat-gtkada;
         script:
-         - docker run -v $(pwd):/app thindil/gnat-gtkada /bin/sh -c "cd /app && others/build.sh"
-         - tar -czf steamsky-dev-Linux-64.tar.gz usr
+         - docker run -v $(pwd):/app thindil/gnat-gtkada /bin/sh -c "cd /app && ./build.sh release"
+         - tar -czf steamsky-stable.tar.gz usr
       - os: windows
         env:
-         - FILENAME=steamsky-dev-Windows-64.zip
+         - EXTENSION=zip
         install:
          - export "PATH=/c/GNAT/bin:/c/GtkAda/bin:$PATH";
          - export "GPR_PROJECT_PATH=/c/GtkAda/lib/gnat";
@@ -29,24 +29,24 @@ matrix:
          - 7z x gtkada.7z -oc:/;
         script:
          - gprbuild -P steamsky.gpr -XMode=release
-         - 7z a -tzip steamsky-dev-Windows-64.zip bin;
+         - 7z a -tzip steamsky-stable.zip bin;
 
 before_deploy:
-    - "if [[ $FILENAME == \"steamsky-dev-Linux-64.tar.gz\" ]]; then git tag -f travis-dev-build && git remote add gh https://${TRAVIS_REPO_SLUG%/*}:${KEY}@github.com/${TRAVIS_REPO_SLUG}.git && git push -f gh travis-dev-build && git remote remove gh; fi"
-    - export "TRAVIS_TAG=travis-dev-build";
+    - "if [[ $EXTENSION == \"tar.gz\" ]]; then git tag -f travis-stable-build && git remote add gh https://${TRAVIS_REPO_SLUG%/*}:${KEY}@github.com/${TRAVIS_REPO_SLUG}.git && git push -f gh travis-stable-build && git remote remove gh; fi"
+    - export "TRAVIS_TAG=travis-stable-build";
 
 deploy:
   provider: releases
   skip_cleanup: true
   api-key: $KEY
   file:
-   - $FILENAME
-  name: Continuous Integration build
-  body: Development build of $TRAVIS_BRANCH built by Travis CI.
+   - steamsky-stable.$EXTENSION
+  name: Continuous Integration stable build
+  body: Stable build of $TRAVIS_BRANCH built by Travis CI.
   prerelease: true
   overwrite: true
   target_commitish: $TRAVIS_COMMIT
-  tag_name: travis-dev-build
+  tag_name: travis-stable-build
   on:
    branch: 5.0
 
