updated bob configuration
FossilOrigin-Name: 2aa5ad4f8b85c10b9f1b88804a9a0ccea3c7bf3241f3efd90035fcca77b87d8f

--- a/.bob.yml
+++ b/.bob.yml
@@ -16,7 +16,7 @@ version: 2.0
    name: release
    execute:
       - gprclean -P steamsky.gpr
-      - others/build.sh
+      - others/build.tcl
       - gprclean -P steamsky.gpr
    description: Build Steam Sky in release mode
    flags:
