updated Bob configuration
FossilOrigin-Name: bc35374c8969d99a25e61ee613329c5025cc1c8a67ad599d5bda191562a62619

--- a/.bob.yml
+++ b/.bob.yml
@@ -56,7 +56,7 @@ version: 2.0
 - command:
    name: release
    execute:
-      - others/build.cmd
+      - tclsh others/build.tcl
    description: Build Steam sky in release mode
    flags:
       - windowsonly
