updated RODODoc configuration
FossilOrigin-Name: 9552e8b436201f81815d5d446bf98adc1b838ea316a6ec30ec1a3fa583b9f2e0

--- a/others/robodocada.rc
+++ b/others/robodocada.rc
@@ -19,9 +19,11 @@ options:
   --sourceindex "Source files,sources"
   --css others/robodoc.css
 headertypes:
-  h Packages robo_packages 5
-  a Tasks robo_tasks 4
-  t Types robo_types 3
+  h Packages robo_packages 7
+  a Tasks robo_tasks 6
+  t Types robo_types 5
+  s Records robo_records 4
+  d Constants robo_constants 3
   v Variables robo_variables 2
   e Exceptions robo_exceptions 1
   f Subprograms robo_subprograms 0
