--- a/.github/workflows/ada.yml
+++ b/.github/workflows/ada.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Upload the artifact
       uses: actions/upload-artifact@v2
       with:
-         name: steamsky-development-linux
+         name: steamsky-development-linux.tar
          path: steamsky-development-linux.tar
 
   build_windows:
@@ -51,5 +51,5 @@ jobs:
     - name: Upload the artifact
       uses: actions/upload-artifact@v2
       with:
-         name: steamsky-development-windows
+         name: steamsky-development-windows.tar
          path: steamsky-development-windows.tar
