added build unit tests
FossilOrigin-Name: b9200cc1e4ce21d3e04b350f1a3f44f1d2e0fa8c9ff5cb15d80a1f600e64f043

--- a/.github/workflows/ada.yml
+++ b/.github/workflows/ada.yml
@@ -5,7 +5,26 @@ on:
     branches: [ master ]
 
 jobs:
+
+   tests:
+
+    runs-on: ubuntu-latest
+
+    container: ghcr.io/thindil/adabuild:2020.1
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Build the tests
+      run: gprbuild -P tests/driver/test_driver.gpr
+
+    - name: Run the tests
+      run: others/tests.tcl 100
+
   build_linux:
+
+    needs: tests
 
     runs-on: ubuntu-latest
 
@@ -28,6 +47,8 @@ jobs:
          path: steamsky-development-linux.tar
 
   build_windows:
+
+    needs: tests
 
     runs-on: ubuntu-latest
 
