added installing gnattest to Actions
FossilOrigin-Name: 6e115775614b201b68fb9c52fd4c20e3feeb7b32119b2f11a403a66b56010da5

--- a/.github/workflows/ada.yml
+++ b/.github/workflows/ada.yml
@@ -16,6 +16,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Install gnattest
+      run: |
+         apt update
+         apt install -y asis-programs
+
+    - name: Generate tests
+      run: gnattest -P steamsky.gpr
+
     - name: Build the tests
       run: gprbuild -P tests/driver/test_driver.gpr
 
