--- a/.github/workflows/ada.yml
+++ b/.github/workflows/ada.yml
@@ -10,16 +10,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container: ghcr.io/thindil/adabuild:2020.1
+    container: ghcr.io/thindil/adabuild
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
-    - name: Install gnattest
-      run: |
-         apt update
-         apt install -y asis-programs
 
     - name: Generate tests
       run: gnattest -P steamsky.gpr
@@ -36,7 +31,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container: ghcr.io/thindil/adabuild:2020.1
+    container: ghcr.io/thindil/adabuild
 
     steps:
     - name: Checkout
@@ -60,16 +55,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container: ghcr.io/thindil/adabuildwin64:2020.1
+    container: ghcr.io/thindil/adabuildwin64
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
-    - name: Install Tcl
-      run: |
-         apt update
-         apt install -y tcl
 
     - name: Build the program
       run: others/build.tcl x86_64-windows
