updated bob configuration
FossilOrigin-Name: 444e6db5c524185ba5b3b24f85f688f30ea204a67b276953e9476b320de0f9f2

--- a/.bob.yml
+++ b/.bob.yml
@@ -45,7 +45,7 @@ version: 2.0
 - command:
    name: windows
    execute:
-      - sudo docker run --rm -it -v $1:/app ghcr.io/thindil/adabuildwin64:2020.1 /bin/bash
+      - sudo docker run --rm -it -v $1:/app ghcr.io/thindil/adabuildwin64 /bin/bash
    description: Build Steam sky release for Windows on Linux (enter docker image only for now, required argument is path to the game)
    flags:
       - unixonly
