updated Bob configuration
FossilOrigin-Name: 2306bf01b3bd5d0d5f6d1e865c2ecad05daecb1da879f15c6b853631cb80121e

--- a/.bob.yml
+++ b/.bob.yml
@@ -60,3 +60,9 @@ version: 2.0
    execute:
       - gnatpp -P tests/prettytests.gpr
    description: Pretty print unit tests source code
+- command:
+   name: push
+   execute:
+      - fossil sync
+      - fossil git export
+   description: Update remove Fossil repository and its Git mirror
