updated Bob configuration
FossilOrigin-Name: 937fa824f4a3272cae8ec85067b98856e4eba2a7f4aba220d0c685a893cd181b

--- a/.bob.yml
+++ b/.bob.yml
@@ -65,4 +65,8 @@ version: 2.0
    execute:
       - fossil sync
       - fossil git export
+      - cd ../5.0
+      - git push
    description: Update remove Fossil repository and its Git mirror
+   flags:
+      - unixpath
