--- a/.bob.yml
+++ b/.bob.yml
@@ -64,7 +64,7 @@ version: 2.0
    name: push
    execute:
       - fossil sync
-      - fossil git export
+      - fossil git export --force
       - cd ../5.0
       - git push
    description: Update remove Fossil repository and its Git mirror
