use push instead of sync in bob push command
FossilOrigin-Name: 214e1a34c4fc99d99b8bc8552fbc511594e0af1b202c09ea3ea1d02a2f72e369

--- a/.bob.yml
+++ b/.bob.yml
@@ -63,7 +63,7 @@ version: 2.0
 - command:
    name: push
    execute:
-      - fossil sync
+      - fossil push
       - fossil git export --force
       - cd ../5.0
       - git push
