--- a/.bob.yml
+++ b/.bob.yml
@@ -67,6 +67,6 @@ version: 2.0
       - fossil git export --force
       - cd ../5.0
       - git push
-   description: Update remove Fossil repository and its Git mirror
+   description: Update remote Fossil repository and its Git mirror
    flags:
       - unixpath
