--- a/.bob.yml
+++ b/.bob.yml
@@ -70,3 +70,13 @@ version: 2.0
    description: Update remote Fossil repository and its Git mirror
    flags:
       - unixpath
+- command:
+   name: check
+   execute:
+      - gprclean -P steamsky.gpr
+      - cd obj
+      - adactl -f ../others/rules.aru -p ../steamsky.gpr -r steamsky-tcl-cargv
+   description: Run AdaControl to check correctness of the code
+   flags:
+      - unixpath
+   output: adacontrol.log
