use AdaControl output to bob check
FossilOrigin-Name: 68c0b0d5b4621d21fa07733abfac2b407758d97c5f44046ef8df02c551f33700

--- a/.bob.yml
+++ b/.bob.yml
@@ -75,8 +75,7 @@ version: 2.0
    execute:
       - gprclean -P steamsky.gpr
       - cd obj
-      - adactl -f ../others/rules.aru -p ../steamsky.gpr -r steamsky-tcl-cargv
+      - adactl -f ../others/rules.aru -p ../steamsky.gpr -o ../adacontrol.log -r steamsky-tcl-cargv
    description: Run AdaControl to check correctness of the code
    flags:
       - unixpath
-   output: adacontrol.log
