fixed Github workflow for AdaControl
FossilOrigin-Name: 92c8ea275bb52b34ff3db9db636fe9d94e60d5e4de8056fcc1bf31bfdc7869bb

--- a/.github/workflows/adacontrol.yml
+++ b/.github/workflows/adacontrol.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration - development version
+name: AdaControl tests - temporary workflow
 
 on:
   push:
@@ -18,6 +18,7 @@ jobs:
 
     - name: Run AdaControl
       run: |
+         mkdir obj
          cd obj
          adactl -f ../others/rules.aru -p ../steamsky.gpr -o ../adacontrol.log -r steamsky-tcl-cargv
          cd ..
