fixed Github workflow for AdaControl so it save log file
FossilOrigin-Name: 926be7d3d1dc64381490e51d910bd272cdd712a204a4639b495d1b1f64b12231

--- a/.github/workflows/adacontrol.yml
+++ b/.github/workflows/adacontrol.yml
@@ -25,6 +25,7 @@ jobs:
 
     - name: Upload the log
       uses: actions/upload-artifact@v2
+      if: failure()
       with:
          name: adacontrol.log
          path: adacontrol.log
