--- a/.bob.yml
+++ b/.bob.yml
@@ -77,3 +77,19 @@ version: 2.0
    description: Run AdaControl to check correctness of the code
    flags:
       - unixpath
+- command:
+   name: checkall
+   execute:
+      - bob debug
+      - bob tests 20
+      - bob check
+   description: Run all the project tests
+- command:
+   name: checkfile
+   execute:
+      - gprclean -P steamsky.gpr
+      - cd obj
+      - adactl -f ../others/rules.aru -p ../steamsky.gpr ../src/$1
+   description: Run AdaControl to check correctness of the selected file
+   flags:
+      - unixpath
