fixed GitHub workflow for AdaControl
FossilOrigin-Name: 9107f09d7162eb9ece8ec4b97746ac5b050eb17b2ad6af70a5a0027d0eacc15a

--- a/.github/workflows/adacontrol.yml
+++ b/.github/workflows/adacontrol.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
          mkdir obj
          cd obj
-         adactl -f ../others/rules.aru -p ../steamsky.gpr -o ../adacontrol.log -r steamsky-tcl-cargv
+         adactl -f ../others/rules.aru -p ../steamsky.gpr -o ../adacontrol.log -r steamsky-tcl-cargv-unicode-sax-dom-input_sources
          cd ..
 
     - name: Upload the log
