updated GitHub workflow
FossilOrigin-Name: 0441a96c14ebe0030a7f4a8bc34ed72ef24c2feb995f9c4931c67b99658758d5

--- a/.github/workflows/ada-devel.yml
+++ b/.github/workflows/ada-devel.yml
@@ -41,7 +41,7 @@ jobs:
       run: others/build.tcl x86_64-linux-gnu
 
     - name: Compress the artifact
-      run: tar -cf steamsky-development-linux.tar usr
+      run: tar -cf steamsky-development-linux.tar release/linux
 
     - name: Upload the artifact
       uses: actions/upload-artifact@v2
@@ -65,7 +65,7 @@ jobs:
       run: others/build.tcl x86_64-windows
 
     - name: Compress the artifact
-      run: tar -cf steamsky-development-windows.tar release
+      run: tar -cf steamsky-development-windows.tar release/windows
 
     - name: Upload the artifact
       uses: actions/upload-artifact@v2
