bring back pretty printing of tests
FossilOrigin-Name: aa36ffdc5b5693f4e8e0b91c04fa5227dbe80a11d9b2c9a7595bf1a00b0f3452

--- a/.bob.yml
+++ b/.bob.yml
@@ -53,7 +53,13 @@ version: 2.0
    name: pretty
    execute:
       - gnatpp -P steamsky.gpr
+      - gnatpp -P tests/prettytests.gpr
    description: Pretty print Steam Sky source code
+- command:
+   name: prettytests
+   execute:
+      - gnatpp -P tests/prettytests.gpr
+   description: Pretty print unit tests source code
 - command:
    name: push
    execute:
