use Docker image for AdaControl checks
FossilOrigin-Name: 129a54bd9046f5a50c0eeccafe0840fa82333ce61740ef83cc6063d1bc50c1bf

--- a/.bob.yml
+++ b/.bob.yml
@@ -71,8 +71,8 @@ version: 2.0
 - command:
    name: check
    execute:
-      - tclsh others/check.tcl
-   description: Run AdaControl to check correctness of the code
+      - sudo docker run --rm -w /app -v $1:/app ghcr.io/thindil/adabuild:9 /bin/bash others/check.tcl
+   description: Run AdaControl to check correctness of the code required argument is full path to the program source code
    flags:
       - unixpath
 - command:
@@ -85,7 +85,7 @@ version: 2.0
 - command:
    name: checkfile
    execute:
-      - tclsh others/check.tcl $1
-   description: Run AdaControl to check correctness of the selected file
+      - sudo docker run --rm -w /app -v $1:/app ghcr.io/thindil/adabuild:9 /bin/bash others/check.tcl $2
+   description: Run AdaControl to check correctness of the selected file. Required arguments are full path to the program source code and relative path to the file which will be check
    flags:
       - unixpath
